tests/snapshots/e2e__feature_tests__multishell__Bash.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm install v8.11.3
fnm install v11.9.0
fnm use v8.11.3
echo 'set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm use 11
if [ "$(node -v)" '\!'= "v11.9.0" ]; then
    echo '\''Expected Node version to be "v11.9.0", Got: '\''"$(node -v)"
    exit 1
fi
' | bash
if [ "$(node -v)" != "v8.11.3" ]; then
    echo 'Expected Node version to be "v8.11.3", Got: '"$(node -v)"
    exit 1
fi
